[package]
name = "gpurs"
version = "0.3.0"
edition = "2021"
description = "GPU acceleration/linear algebra crate for scientific computing"
readme = "README.md"
homepage = "https://github.com/i-saac/gpurs"
repository = "https://github.com/i-saac/gpurs"
documentation = "https://docs.rs/gpurs"
license = "Apache-2.0"
keywords = ["opencl", "gpu", "matrix", "geometry", "vector"]
categories = ["science", "mathematics", "concurrency", "hardware-support", "memory-management"]

[dependencies]
opencl3 = {version="0.9.3", optional=true}

[features]
default = ["gpu_accel"]
gpu_accel = ["dep:opencl3"]